--- a/qBittorrentClient/res/values-es/strings.xml
+++ b/qBittorrentClient/res/values-es/strings.xml
@@ -100,7 +100,7 @@
     <string name="settings_qbittorrent_hostname_title">Host de conexión</string>
     <string name="settings_qbittorrent_hostname_summary">Hostname o IP</string>
     <string name="settings_qbittorrent_hostname_dialog_title">Hostname o IP?</string>
-    <string name="settings_qbittorrent_subfolder_dialog_title">Subcarpeta? Si no tienes duda deja en blanco!</string>
+    <string name="settings_qbittorrent_subfolder_dialog_title">Subcarpeta? Si tienes dudas, déjalo en blanco!</string>
     <string name="settings_qbittorrent_subfolder_title">Subcarpeta</string>
     <string name="settings_qbittorrent_https_title">Habilitar https</string>
     <string name="settings_qbittorrent_https_summary">Connectar usando https</string>
